[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "reliabilipy"
version = "0.1.0"
description = "A comprehensive Python library for building reliable software with retries, circuit breakers, and state management"
authors = ["Mario Baldi <your.email@example.com>"]
readme = "README.md"
packages = [{include = "reliabilipy"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.8"
redis = ">=4.0.0"
tenacity = ">=8.0.0"
prometheus-client = ">=0.16.0"

[tool.poetry.group.test.dependencies]
pytest = ">=7.3.1"
pytest-asyncio = ">=0.21.0"
pytest-cov = ">=4.1.0"
pytest-mock = ">=3.10.0"
fakeredis = ">=2.0.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore:Call to '__init__' function with deprecated usage of input argument/s 'retry_on_timeout'::fakeredis"
]

[urls]
"Homepage" = "https://github.com/baldimario/reliabilipy"
"Bug Tracker" = "https://github.com/baldimario/reliabilipy/issues"
